--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -2,13 +2,12 @@
 /* GENERAL */
 /* ************************************************ */
 .general-borderPanel {
-    -fx-background-image: url("/design/images/menu_bg.png");;
+    -fx-background-image: url("/design/images/menu_bg.png");
 }
 
 /* ************************************************ */
 /* HEADER */
 /* ************************************************ */
-
 .header-button {
     -fx-padding: 8 15 15 15;
     -fx-background-insets: 0, 0 0 5 0, 0 0 6 0, 0 0 7 0;
@@ -78,7 +77,7 @@
     -fx-font-size: 30;
     -fx-font-weight: bolder;
     -fx-text-fill: #d9d2f8;
-    -fx-font-family: Roboto;
+    -fx-font-family: Impact;
     -fx-text-alignment: center;
 }
 
@@ -88,6 +87,7 @@
     -fx-font-family: Roboto;
     -fx-text-alignment: justify;
 }
+
 
 .instructions-body {
     -fx-background-color: rgba(201, 201, 236, 0.47);
@@ -99,9 +99,7 @@
 /* ************************************************ */
 
 .corps-gridPane {
-    -fx-pref-width: 800;
-    /*-fx-padding: 15,15,15,15;*/
-    -fx-vgap: 10;
+    -fx-vgap: 100;
     -fx-hgap: 10;
 }
 
