îles à présent cliquable !

--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -122,6 +122,13 @@
     -fx-hgap: 10;
 }
 
+.button-island{
+    -fx-border-color: transparent;
+    -fx-border-width: 0;
+    -fx-background-radius: 0;
+    -fx-background-color: transparent;
+}
+
 /* ************************************************ */
 /* COLONNE GAUCHE */
 /* ************************************************ */
