--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -136,11 +136,19 @@
     -fx-background-color: transparent;
 }
 
+.toggle-unselected:hover {
+
+}
+
 .toggle-selected{
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
     -fx-background-color: transparent;
+}
+
+.toggle-selected:hover {
+
 }
 
 .toggle-selected:selected{
