--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -1,4 +1,3 @@
-
 /* ************************************************ */
 /* GENERAL */
 /* ************************************************ */
@@ -30,7 +29,7 @@
     #8c7fc9,
     radial-gradient(center 50% 50%, radius 100%, #d9d2f8, #d9d2f8);
     -fx-padding: 10 15 13 15;
-    -fx-background-insets: 2 0 0 0,2 0 3 0, 2 0 4 0, 2 0 5 0;
+    -fx-background-insets: 2 0 0 0, 2 0 3 0, 2 0 4 0, 2 0 5 0;
 }
 
 .header-quit-button {
@@ -68,7 +67,7 @@
     #8c7fc9,
     radial-gradient(center 50% 50%, radius 100%, #d9d2f8, #d9d2f8);
     -fx-padding: 10 15 13 15;
-    -fx-background-insets: 2 0 0 0,2 0 3 0, 2 0 4 0, 2 0 5 0;
+    -fx-background-insets: 2 0 0 0, 2 0 3 0, 2 0 4 0, 2 0 5 0;
 }
 
 /* ************************************************ */
@@ -107,7 +106,7 @@
     -fx-pref-width: 100;
 }
 
-.parameters-label{
+.parameters-label {
     -fx-font-size: 20;
     -fx-text-fill: #d9d2f8;
     -fx-font-family: Roboto;
@@ -122,7 +121,7 @@
     -fx-hgap: 10;
 }
 
-.button-island{
+.button-island {
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
@@ -133,26 +132,27 @@
 
 }
 
-.toggle-unselected{
+.toggle-unselected {
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
     -fx-background-color: transparent;
 }
 
-.toggle-selected{
+.toggle-selected {
     -fx-border-color: transparent;
     -fx-border-width: 0;
     -fx-background-radius: 0;
     -fx-background-color: transparent;
 }
 
-.toggle-selected:selected{
+.toggle-selected:selected {
     -fx-border-color: #42ecdc;
     -fx-border-width: 2;
     -fx-background-radius: 0;
     -fx-background-color: transparent;
 }
+
 /* ************************************************ */
 /* COLONNE GAUCHE */
 /* ************************************************ */
