--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -168,6 +168,10 @@
     -fx-pref-height: 300;
 }
 
+.isPlaying-label {
+    -fx-text-fill: #2ff1b0;
+}
+
 
 /* ************************************************ */
 /* COLONNE DROITE */
