--- a/src/main/resources/design/css/styleSheet.css
+++ b/src/main/resources/design/css/styleSheet.css
@@ -196,3 +196,8 @@
     -fx-alignment: center;
     -fx-background-color: #CDAEF3;
 }
+
+.alert.dialog-pane {
+    -fx-alignment: center;
+    -fx-background-color: #a5acea;
+}
